force-app/main/default/objects/EmailQueue__c/EmailQueue__c.object-meta.xml
<CustomObject>
    <label>Email Queue</label>
    <nameField>
        <displayFormat>EQ-{0000}</displayFormat>
        <label>Email Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>