force-app/main/default/objects/EmailQueue__c/fields/DaysSinceScheduled__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceScheduled__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <label>Days Since Scheduled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>