force-app/main/default/objects/EmailQueue__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <description>The error type</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>