force-app/main/default/objects/EmailQueue__c/fields/HoursSinceScheduled__c.field-meta.xml
<CustomField>
    <fullName>HoursSinceScheduled__c</fullName>
    <formula>(NOW() - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Since Scheduled</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>