force-app/main/default/objects/EmailQueue__c/fields/HTMLBody__c.field-meta.xml
<CustomField>
    <fullName>HTMLBody__c</fullName>
    <description>message HTML body, if not blank, uses instead of template</description>
    <label>HTML Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>