force-app/main/default/objects/EmailQueue__c/fields/Importance__c.field-meta.xml
<CustomField>
    <fullName>Importance__c</fullName>
    <description>5 is highest</description>
    <inlineHelpText>5 is highest</inlineHelpText>
    <label>Importance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Crucial</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Higher</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>