force-app/main/default/objects/EmailQueue__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>CASE( MONTH( DATEVALUE( LastModifiedDate )),
    1, &quot;January &quot;,
    2, &quot;February &quot;,
    3, &quot;March &quot;,
    4, &quot;April &quot;,
    5, &quot;May &quot;,
    6, &quot;June &quot;,
    7, &quot;July &quot;,
    8, &quot;August &quot;,
    9, &quot;September &quot;,
    10, &quot;October &quot;,
    11, &quot;November &quot;,
    12, &quot;December &quot;,
    &quot;ERROR&quot;) &amp; TEXT( YEAR( DATEVALUE( LastModifiedDate )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>