force-app/main/default/objects/EmailQueue__c/fields/OrgWideEmailAddressId__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddressId__c</fullName>
    <description>The SObject OrgWideEmailAddress ID for the preferred email address used as sender.</description>
    <inlineHelpText>The SObject OrgWideEmailAddress ID for the preferred email address used as sender.</inlineHelpText>
    <label>Org Wide Email Address ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>