force-app/main/default/objects/EmailQueue__c/fields/SaveAsActivity__c.field-meta.xml
<CustomField>
    <fullName>SaveAsActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>EmailMessage SObject can automatically create a Task/Activity for the email for logging purposes and viewing if the email has been opened</description>
    <inlineHelpText>EmailMessage SObject can automatically create a Task/Activity for the email for logging purposes and viewing if the email has been opened</inlineHelpText>
    <label>Save As Activity</label>
    <type>Checkbox</type>
</CustomField>