force-app/main/default/objects/EmailQueue__c/fields/ScheduledPriority__c.field-meta.xml
<CustomField>
    <fullName>ScheduledPriority__c</fullName>
    <description>Calculates when an emails should be scheduled to be sent (higher is sooner)</description>
    <formula>CASE( DaysSinceScheduled__c,

    0, VALUE(Text(Priority__c)) * (DaysSinceScheduled__c + 1),
    1, VALUE(Text(Priority__c)) * DaysSinceScheduled__c,
    2, VALUE(Text(Priority__c)) * DaysSinceScheduled__c * 2,
    3, VALUE(Text(Priority__c)) * DaysSinceScheduled__c * 2,

    10 * VALUE(Text(Priority__c)) * DaysSinceScheduled__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates when an emails should be scheduled to be sent (higher is sooner)</inlineHelpText>
    <label>Scheduled Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>