force-app/main/default/objects/EmailQueue__c/fields/SendTime__c.field-meta.xml
<CustomField>
    <fullName>SendTime__c</fullName>
    <formula>TEXT(LastModifiedDate - CreatedDate)</formula>
    <label>Send Time</label>
    <type>Text</type>
</CustomField>