force-app/main/default/objects/EmailQueue__c/fields/SendTimeInHours__c.field-meta.xml
<CustomField>
    <fullName>SendTimeInHours__c</fullName>
    <formula>(LastModifiedDate - CreatedDate)*24</formula>
    <label>Send Time in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>