force-app/main/default/objects/EmailQueue__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Sets subject if HTMLBody is not blank</description>
    <label>Subject</label>
    <length>100</length>
    <type>Text</type>
</CustomField>