force-app/main/default/objects/EmailQueue__c/fields/TargetObjectId__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectId__c</fullName>
    <description
    >The ID for the Contact or Lead to receive the email</description>
    <inlineHelpText
    >The ID for the Contact or Lead to receive the email</inlineHelpText>
    <label>Target Object ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>