force-app/main/default/objects/EmailQueue__c/fields/TargetObjectIdURL__c.field-meta.xml
<CustomField>
    <fullName>TargetObjectIdURL__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; + TargetObjectId__c, TargetObjectId__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Object ID</label>
    <type>Text</type>
</CustomField>