force-app/main/default/objects/EmailQueue__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <description>The SObject EmailTemplate ID</description>
    <inlineHelpText>The SObject EmailTemplate ID</inlineHelpText>
    <label>Template ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>