force-app/main/default/objects/EmailQueue__c/fields/TemplateIdURL__c.field-meta.xml
<CustomField>
    <fullName>TemplateIdURL__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; + TemplateId__c, TemplateId__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template ID</label>
    <type>Text</type>
</CustomField>