force-app/main/default/objects/EmailQueue__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <description>DeveloperName of EmailTemplate</description>
    <inlineHelpText>DeveloperName of EmailTemplate</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>