force-app/main/default/objects/EmailQueue__c/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <description>Destination Email address</description>
    <label>To Address</label>
    <type>Email</type>
</CustomField>