force-app/main/default/objects/EmailQueue__c/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <description>The related SObject for the email. Required if the EmailTemplate contains lookup data content.</description>
    <inlineHelpText>The related SObject for the email. Required if the EmailTemplate contains lookup data content.</inlineHelpText>
    <label>What ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>