force-app/main/default/objects/EmailQueue__c/fields/WhatIdURL__c.field-meta.xml
<CustomField>
    <fullName>WhatIdURL__c</fullName>
    <formula
    >HYPERLINK( &quot;/&quot; + WhatId__c, WhatId__c, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>What ID</label>
    <type>Text</type>
</CustomField>