force-app/main/default/objects/EmailQueue__c/validationRules/Cant_edit_sent_email.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_edit_sent_email</fullName>
    <active>true</active>
    <errorConditionFormula
    >!ISCHANGED( Status__c ) &amp;&amp; ISPICKVAL( Status__c, &quot;Sent&quot;) &amp;&amp; !ISNEW()</errorConditionFormula>
    <errorMessage
    >You can&apos;t edit the record if has already been sent</errorMessage>
</ValidationRule>