force-app/main/default/objects/EmailQueue__c/validationRules/New_record_must_be_queued.validationRule-meta.xml
<ValidationRule>
    <fullName>New_record_must_be_queued</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
    &amp;&amp;
ISPICKVAL( Status__c , &apos;Sent&apos; )
    &amp;&amp;
ISPICKVAL( Status__c , &apos;Error&apos; )
    &amp;&amp;
!$Permission.IgnoreValidation</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Cannot create new record and not have status as queued</errorMessage>
</ValidationRule>