force-app/main/default/objects/EmailQueue__c/validationRules/OrgWideEmailAddressId_correctId.validationRule-meta.xml
<ValidationRule>
    <fullName>OrgWideEmailAddressId_correctId</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX( OrgWideEmailAddressId__c, &apos;[a-zA-Z0-9]{18}|[a-zA-Z0-9]{15}|^$&apos; ) 
  &amp;&amp;
!BEGINS( OrgWideEmailAddressId__c, &apos;0D2&apos;)</errorConditionFormula>
    <errorDisplayField>OrgWideEmailAddressId__c</errorDisplayField>
    <errorMessage>OrgWideEmailAddressId__c must be 15 or 18 characters, and being with &apos;0D2&apos; prefix</errorMessage>
</ValidationRule>