force-app/main/default/objects/EmailQueue__c/validationRules/TargetObjectId_correctId.validationRule-meta.xml
<ValidationRule>
    <fullName>TargetObjectId_correctId</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX( TargetObjectId__c, &apos;[a-zA-Z0-9]{18}|[a-zA-Z0-9]{15}&apos; ) 
  &amp;&amp;
(
    !BEGINS(  TargetObjectId__c, &apos;003&apos;)
        ||
    !BEGINS(  TargetObjectId__c, &apos;005&apos;)
        ||
    !BEGINS(  TargetObjectId__c, &apos;00Q&apos;)
)</errorConditionFormula>
    <errorDisplayField>TargetObjectId__c</errorDisplayField>
    <errorMessage
    >TargetObjectId__c must be 15 or 18 characters, and being with &apos;003&apos;, &apos;005&apos; or &apos;00Q&apos; prefix</errorMessage>
</ValidationRule>