force-app/main/default/objects/EmailQueue__c/validationRules/TemplateId_correctId.validationRule-meta.xml
<ValidationRule>
    <fullName>TemplateId_correctId</fullName>
    <active>true</active>
    <errorConditionFormula>!REGEX( TemplateId__c, &apos;[a-zA-Z0-9]{18}|[a-zA-Z0-9]{15}&apos; ) 
  &amp;&amp;
!BEGINS( TemplateId__c, &apos;00X&apos;)</errorConditionFormula>
    <errorDisplayField>TemplateId__c</errorDisplayField>
    <errorMessage>TemplateId__c must be 15 or 18 characters, and being with &apos;00X&apos; prefix</errorMessage>
</ValidationRule>