force-app/main/default/objects/EmailQueue__c/validationRules/TemplateId_or_Name_must_be_set.validationRule-meta.xml
<ValidationRule>
    <fullName>TemplateId_or_Name_must_be_set</fullName>
    <active>true</active>
    <description>TemplateId or Name or HTMLBody must be set</description>
    <errorConditionFormula>ISBLANK( TemplateId__c ) &amp;&amp; ISBLANK( TemplateName__c ) &amp;&amp; ISBLANK( HTMLBody__c )</errorConditionFormula>
    <errorMessage>Must set either TemplateId__c or TemplateName__c</errorMessage>
</ValidationRule>