force-app/main/default/objects/EmailQueue__c/listViews/Error.listView-meta.xml
<ListView>
    <fullName>Error</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TargetObjectId__c</columns>
    <columns>WhatId__c</columns>
    <columns>OrgWideEmailAddressId__c</columns>
    <columns>TemplateId__c</columns>
    <columns>Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Error</label>
</ListView>