force-app/main/default/objects/EmailQueue__c/listViews/Queued.listView-meta.xml
<ListView>
    <fullName>Queued</fullName>
    <columns>NAME</columns>
    <columns>DaysSinceScheduled__c</columns>
    <columns>Priority__c</columns>
    <columns>ScheduledPriority__c</columns>
    <columns>TargetObjectIdURL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Queued</value>
    </filters>
    <label>Queued</label>
</ListView>