force-app/main/default/objects/EmailQueue__c/listViews/Sent.listView-meta.xml
<ListView>
    <fullName>Sent</fullName>
    <columns>NAME</columns>
    <columns>SendTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <label>Sent</label>
</ListView>